# Black-Hole-Sim-OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: AppPaths.h  BlackHole.h  Camera.h  Star.h  Window.h  shader.h
libs/glad/include/glad/: glad.h
res/: computeShader.glsl  fragmentShader.glsl  vertexShader.glsl
src/: AppPaths.cpp  BlackHole.cpp  Camera.cpp  Star.cpp  Window.cpp  main.cpp  shader.cpp
